<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memo</string>
    <string name="folder">Folder</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="web">Web</string>
    <string name="background_type">Type:</string>
    <string name="tile_size">Tile size:</string>
    <string name="colour">Color:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="current_colour">Current colour</string>
    <string name="dismiss">Dismiss</string>
    <string name="new_location">New location:</string>
    <string name="copy_existing_data">Copy over existing data:</string>
    <string name="move">Move</string>
    <string name="delete_old_files">Delete old files:</string>
    <string name="move_storage_warning">Here be dragons! Moving the storage location could cause problems with accessing memos from other applications, do so at your own risk.</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="background">Background</string>
    <string name="refresh">Refresh</string>
    <string name="content">Memo</string>
    <string name="search">Search</string>
    <string name="insert">Insert</string>
    <string name="capture">Capture</string>
    <string name="open">Open</string>
    <string name="new_item">New</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="offset_title">Offset</string>
    <string name="offset_description">The offset for drawing on the screen</string>
    <string name="spen_button_title">S-Pen Button</string>
    <string name="spen_button_description">Change what the button does</string>
    <string name="finger_title">Finger</string>
    <string name="finger_description">Change what your finger does</string>
    <string name="dominant_hand_title">Dominant Hand</string>
    <string name="dominant_hand_description">Choosing left handed will switch the physical back and menu buttons when drawing</string>
    <string name="disable_back_button_title">Disable Back Button</string>
    <string name="disable_back_button_description">When in drawing mode</string>
    <string name="default_background_title">Default Background</string>
    <string name="default_background_description">Set the default background for new notes</string>
    <string name="fullscreen_title">Fullscreen</string>
    <string name="fullscreen_description">When in drawing mode</string>
    <string name="prevent_screen_lock_title">Prevent Screen Lock</string>
    <string name="prevent_screen_lock_description">When in drawing mode</string>
    <string name="orientation_title">Orientation</string>
    <string name="orientation_description">Lock screen orientation when drawing</string>
    <string name="include_background_share_title">Include Page Background</string>
    <string name="include_background_share_description">When sharing from the share menu</string>
    <string name="delete_temp_file_title">Delete Temp Files</string>
    <string name="delete_temp_file_description">Increase free storage space</string>
    <string name="delete_temp_on_exit_title">Auto Delete Temp Files</string>
    <string name="delete_temp_on_exit_description">On application exit</string>
    <string name="set_storage_location_title">Set Storage Location</string>
    <string name="set_storage_location_description">Move where memos are stored</string>
    <string name="auto_save_on_exit_title">Auto Save</string>
    <string name="auto_save_on_exit_description">On application exit</string>
    <string name="about_title">About</string>
    <string name="about_description">About Memo</string>
    <string name="change_log_title">Change Log</string>
    <string name="change_log_description">See whats new in this version</string>
    <string name="share_title">Share</string>
    <string name="share_description">Tell your friends about Memo</string>
    <string name="rate_title">Rate and Review</string>
    <string name="rate_description">Tell people what you think about Memo</string>
    <string name="contribute_title">Contribute</string>
    <string name="contribute_description">Memo is open source software</string>
    <string name="nathan_garside_title">Nathan Garside (developer)</string>
    <string name="nathan_garside_description">Open XDA Developers thread</string>
    <string name="wallec_title">Wallec (icon design)</string>
    <string name="wallec_description">Open Deviant Art page</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="duplicate_selected">Duplicate Selected</string>
    <string name="page_background">Page Background</string>
    <string name="toggle_orientation_lock">Lock Orientation</string>
    <string name="colour_dialog_title">Choose Colour</string>
    <string name="at_root_directory">Already at the root directory</string>
    <string name="add">Add</string>
    <string name="add_folder">Add Folder</string>
    <string name="empty_folder">This folder is empty</string>
    <string name="all">All</string>
    <string name="misc">Misc</string>
    <string name="add_folder_spinner">Add folder...</string>
    <string name="already_exists_title">Already Exists</string>
    <string name="already_exists_description">You can not create this folder as it already exists.</string>
    <string name="invalid_filename_title">Invalid Filename</string>
    <string name="invalid_filename_description">You can not create folders which start with a full stop \'.\'</string>
    <string name="ok">OK</string>
    <string name="cant_delete_title">Can\'t Delete</string>
    <string name="cant_delete_description">You can not delete the root folder.</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete %s?</string>
    <string name="delete_confirm">Are you sure you want to delete this folder?</string>
    <string name="move_images_title">Move Images?</string>
    <string name="move_images_description">This folder contains images, would you like to move them to the root directory?</string>
    <string name="image">Image</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete_confirm_title">Are you sure?</string>
    <string name="delete_confirm_description">Are you sure you want to delete this image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share_image_title">Share Image</string>
    <string name="choose_folder">Choose Folder</string>
    <string name="choose_new_location">Choose new location...</string>
    <string name="custom_offset_title">Custom Offset</string>
    <string-array name="spen_button_array">
        <item >Nothing</item>
        <item >Pen Tool</item>
        <item >Eraser Tool</item>
    </string-array>
    <string name="choose_action_title">Choose Action</string>
    <string-array name="finger_array">
        <item >Nothing</item>
        <item >Current Tool</item>
        <item >Pen Tool</item>
        <item >Eraser Tool</item>
    </string-array>
    <string name="set_dominant_hand_title">Set Dominant Hand</string>
    <string-array name="dominant_hand_array">
        <item >Right Handed</item>
        <item >Left Handed</item>
    </string-array>
    <string name="fullscreen_dialog_title">Choose Fullscreen Mode</string>
    <string-array name="fullscreen_array">
        <item >Show Toolbar And Statusbar</item>
        <item >Only Show Statusbar</item>
        <item >Only Show Toolbar</item>
        <item >Don\'t Show Either</item>
    </string-array>
    <string name="orientation_dialog_title">Orientation</string>
    <string-array name="orientation_array">
        <item >Either</item>
        <item >Portrait Only</item>
        <item >Landscape Only</item>
    </string-array>
    <string name="here_be_dragons">Here Be Dragons!</string>
    <string name="delete_temp_files_warning">Deleting the temporary files could cause problems when accessing memos from other applications.</string>
    <string name="move_storage">Move Storage</string>
    <string name="error">Error</string>
    <string name="move_storage_error">Can not move storage location as the storage location you have set is the same as the current storage location</string>
    <string name="about_dialog_title">About Memo</string>
    <string name="about_dialog_info">Version 0.6.2 (beta)\n\nMemo is designed to make note taking quick and easy\n\n© Copyright Nathan Garside 2012</string>
    <string name="move_completed_title">Move Completed</string>
    <string name="move_completed_info">You will need to restart Memo and any open widgets for the changes to take effect</string>
    <string name="loading_dialog">Loading, please wait...</string>
    <string name="saving_dialog">Saving, please wait...</string>
    <string name="up_tooltip">View All Memos</string>
    <string name="pen_tooltip">Pen Tool</string>
    <string name="eraser_tooltip">Eraser Tool</string>
    <string name="image_tooltip">Insert Image</string>
    <string name="text_tooltip">Insert Text</string>
    <string name="undo_tooltip">Undo</string>
    <string name="redo_tooltip">Redo</string>
    <string name="save_tooltip">Save</string>
    <string name="share_tooltip">Share</string>
    <string name="save_dialog_title">Save first?</string>
    <string name="save_dialog_info">You have unsaved changes, would you like to save them?</string>
    <string-array name="insert_image_array">
        <item >Camera</item>
        <item >Gallery</item>
        <item >Map</item>
        <item >Webpage</item>
    </string-array>
    <string name="insert_image_title">Insert Image</string>
    <string name="save_temp_dialog">Saving temporary file, please wait...</string>
    <string name="up">Up</string>
    <string-array name="background_type_array">
        <item >Blank</item>
        <item >Grid</item>
        <item >Ruled</item>
    </string-array>
    <string name="license_title">License</string>
    <string name="license_description">Memo is licensed under GPLv3</string>
    <string name="gpl_title">GPLv3</string>
    <string name="pref_input">Input</string>
    <string name="pref_interface">Interface</string>
    <string name="pref_sharing">Sharing</string>
    <string name="pref_system">System</string>
    <string name="pref_credits">Credits</string>
</resources>