<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_input">
        <Preference
            android:key="offset"
            android:title="@string/offset_title"
            android:summary="@string/offset_description"/>
        <Preference
            android:key="spenButton"
            android:title="@string/spen_button_title"
            android:summary="@string/spen_button_description"/>
        <Preference
            android:key="finger"
            android:title="@string/finger_title"
            android:summary="@string/finger_description"/>
        <Preference
            android:key="dominantHand"
            android:title="@string/dominant_hand_title"
            android:summary="@string/dominant_hand_description"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_interface">
        <CheckBoxPreference
            android:key="disableBackButton"
            android:title="@string/disable_back_button_title"
            android:summary="@string/disable_back_button_description"/>
        <Preference
            android:key="defaultBackground"
            android:title="@string/default_background_title"
            android:summary="@string/default_background_description"/>
        <Preference
            android:key="fullscreen"
            android:title="@string/fullscreen_title"
            android:summary="@string/fullscreen_description"/>
        <CheckBoxPreference
            android:key="preventScreenLock"
            android:title="@string/prevent_screen_lock_title"
            android:summary="@string/prevent_screen_lock_description"/>
        <Preference
            android:key="orientation"
            android:title="@string/orientation_title"
            android:summary="@string/orientation_description"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sharing">
        <CheckBoxPreference
            android:key="includePageBackgroundShare"
            android:title="@string/include_background_share_title"
            android:summary="@string/include_background_share_description"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_system">
        <Preference
            android:key="deleteTempFiles"
            android:title="@string/delete_temp_file_title"
            android:summary="@string/delete_temp_file_description"/>
        <CheckBoxPreference
            android:key="deleteTempOnExit"
            android:title="@string/delete_temp_on_exit_title"
            android:summary="@string/delete_temp_on_exit_description"/>
        <Preference
            android:key="setStorageLocation"
            android:title="@string/set_storage_location_title"
            android:summary="@string/set_storage_location_description"/>
        <CheckBoxPreference
        	android:key="autoSaveOnExit"
            android:title="@string/auto_save_on_exit_title"
            android:summary="@string/auto_save_on_exit_description"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_dialog_title">
        <Preference
            android:key="about"
            android:title="@string/about_title"
            android:summary="@string/about_description"/>
        <Preference
            android:key="changeLog"
            android:title="@string/change_log_title"
            android:summary="@string/change_log_description"/>
        <Preference
            android:key="share"
            android:title="@string/share_title"
            android:summary="@string/share_description"/>
        <Preference
            android:key="rateAndReview"
            android:title="@string/rate_title"
            android:summary="@string/rate_description"/>
        <Preference
            android:key="contribute"
            android:title="@string/contribute_title"
            android:summary="@string/contribute_description"/>
        <Preference
            android:key="license"
            android:title="@string/license_title"
            android:summary="@string/license_description"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_credits">
        <Preference
            android:key="nathanGarside"
            android:title="@string/nathan_garside_title"
            android:summary="@string/nathan_garside_description"/>
        <Preference
            android:key="wallec"
            android:title="@string/wallec_title"
            android:summary="@string/wallec_description"/>
    </PreferenceCategory>
</PreferenceScreen>