<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
			android:id="@+id/back"
	android:background="#ffffffff">
	<ImageButton

			android:id="@+id/iconBtn"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="@drawable/widget_background" android:contentDescription="@string/background"/>
		<ImageView

			android:id="@+id/imageView"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:scaleType="fitXY"
			android:contentDescription="@string/content"/>
	<ImageButton

			android:id="@+id/penBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:background="@drawable/widget_refresh" android:contentDescription="@string/refresh"/>
</RelativeLayout>