
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
              android:orientation="vertical"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
        </ListView>
    <LinearLayout
        android:layout_width="fill_parent"
              android:orientation="horizontal"
        
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_left"
        android:textAppearance="?android:attr/textAppearanceSmall"  
            android:text="@string/cancel" />
        <Button
            android:id="@+id/upButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_left"
        android:textAppearance="?android:attr/textAppearanceSmall"  
            android:text="@string/up" />
        <Button
            android:id="@+id/newButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_left"
        android:textAppearance="?android:attr/textAppearanceSmall"  
            android:text="@string/new_item" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_right"
        android:textAppearance="?android:attr/textAppearanceSmall"  
            android:text="@string/confirm" />

    </LinearLayout>

    </LinearLayout>
