
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
              android:orientation="vertical"
        
        android:layout_height="wrap_content" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
              android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
              android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
              android:orientation="horizontal"
        
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_left"
        android:textAppearance="?android:attr/textAppearanceSmall"  
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_right"
        android:textAppearance="?android:attr/textAppearanceSmall"  
            android:text="@string/confirm" />

    </LinearLayout>
    </LinearLayout>
